# docker-polyglot-monorepo

./: .gitignore  README.md  docker-compose.yml
apps/api-rust/: Cargo.toml  Dockerfile
apps/api-rust/src/: main.rs
apps/web-node/: Dockerfile  index.html  package.json  vite.config.js  vite.config.ts
apps/web-node/src/: main.js  style.css
apps/web-node/src/lib/server/: redis.ts
apps/web-node/src/routes/: +page.svelte  layout.css
apps/web-node/src/routes/api/results/: +server.ts
apps/web-node/src/routes/api/tasks/: +server.ts
apps/worker-py/: Dockerfile  main.py  requirements.txt
apps/worker-rust/: Cargo.toml  Dockerfile
apps/worker-rust/src/: main.rs
apps/worker-ts/: Dockerfile  package.json  tsconfig.json
apps/worker-ts/src/: index.ts
