[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
redis-work-queue = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
